syntax = "proto3";
import "google/protobuf/struct.proto";

package auth;

service AuthService {
  rpc Login (DefaultRequest) returns (DefaultResponse) {}
}

message DefaultRequest {
  google.protobuf.Struct query = 1;
  google.protobuf.Struct params = 2;
  google.protobuf.Struct body = 3;
  google.protobuf.Struct headers = 4;
}

message DefaultResponse {
  int32 statusCode = 1;
  string message = 2;
  repeated string errors = 3;
  google.protobuf.Struct data = 4;
}
